# OpenGL-Getting-Started

./: 404.html  CMakeLists.txt  LICENSE  README.md  index.html  mkdocs.yml  sitemap.xml
00-setup/00-setup/: index.html
01-basics/01-basic-window/: index.html
01-basics/02-basic-window-and-triangle/: index.html
02-debugging/01-debugging/: index.html
02-debugging/02-debug-callback/: index.html
02-debugging/02-debug-callback-exercise-01/: index.html
02-debugging/02-debug-callback-exercise-02/: index.html
02-debugging/03-renderdoc/: index.html
02-debugging/04-renderdoc-exercise-01/: index.html
02-debugging/05-nsight-graphics/: index.html
99910-basic-triangle/01-basic-application/: index.html
99910-basic-triangle/10-basic-triangle/: index.html
about/: index.html
docs/: about.md  index.md
docs/00-setup/: 00-setup.md  01-basic-application.md
docs/01-basic-triangle/: 01-basic-triangle-dsa.md  01-basic-triangle-nondsa.md
docs/01-basics/: 01-basic-window.md  02-basic-window-and-triangle.md
docs/02-debugging/: 01-debugging.md  02-debug-callback-exercise-01.md  02-debug-callback-exercise-02.md  02-debug-callback.md  03-renderdoc.md  04-renderdoc-exercise-01.md  05-nsight-graphics.md
docs/02-debugging/02-debug-callback/: 01-exercise.md  02-exercise.md
docs/10-basic-triangle/: 10-basic-triangle.md
docs/99910-basic-triangle/: 01-basic-application.md  10-basic-triangle.md
docs/stylesheets/: extra.css
lib/: CMakeLists.txt
search/: search_index.json
src/: Main.cpp
src/01-01-BasicWindow/: CMakeLists.txt  Main.cpp
src/01-02-BasicWindowAndTriangle/: CMakeLists.txt  Main.cpp
src/01-BasicTriangle-DSA/: CMakeLists.txt  Main.cpp
src/01-BasicTriangle-nonDSA/: CMakeLists.txt  Main.cpp
src/01-HelloWindow/: CMakeLists.txt  HelloWindowApplication.cpp  HelloWindowApplication.hpp  Main.cpp
src/02-HelloTriangle/: CMakeLists.txt  HelloTriangleApplication.cpp  HelloTriangleApplication.hpp  Main.cpp  Program.hpp
src/02-HelloTriangle/Data/Shaders/: Simple.fs.glsl  Simple.vs.glsl
src/02-HelloTriangleBasic/: CMakeLists.txt  HelloTriangleBasicApplication.cpp  HelloTriangleBasicApplication.hpp  Main.cpp  VertexPositionColor.hpp
src/02-HelloTriangleBasic/Data/Shaders/: Simple.fs.glsl  Simple.vs.glsl
src/03-HelloTriangle/: CMakeLists.txt  HelloTriangleApplication.cpp  HelloTriangleApplication.hpp  InputLayout.cpp  InputLayout.hpp  VertexPositionUv.hpp
src/Shared/: Application.cpp  Application.hpp  CMakeLists.txt
